crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__py38__unraw-re-pattern_RUF039_py_version_sensitive.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF039 [*] First argument to `re.compile()` is not raw string
 --> RUF039_py_version_sensitive.py:3:12
  |
1 | import re
2 |
3 | re.compile("\N{Partial Differential}")  # with unsafe fix if python target is 3.8 or higher, else without fix
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Replace with raw string
  |
2 |
  - re.compile("\N{Partial Differential}")  # with unsafe fix if python target is 3.8 or higher, else without fix
3 + re.compile(r"\N{Partial Differential}")  # with unsafe fix if python target is 3.8 or higher, else without fix
  |
note: This is an unsafe fix and may change runtime behavior
